# Online_store

./: .env.sample  .flake8  .gitignore  LICENSE.txt  README.md  catalog_fixture.json  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_author.py  0003_alter_blog_options.py  0004_blog_owner_post.py  0005_alter_blog_options.py  0006_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0003_contact.py  0004_alter_contact_options.py  0005_alter_product_image.py  0006_alter_category_name.py  0007_product_views_counter_alter_product_name.py  0008_remove_product_views_counter.py  0009_alter_category_name.py  0010_alter_category_name.py  0011_alter_category_description_alter_category_name.py  0012_product_status.py  0013_alter_product_options.py  0014_product_owner.py  0015_alter_product_owner.py  0016_alter_product_category_alter_product_owner_and_more.py  0017_category_slug.py
catalog/templates/: add_product.html  base.html  contacts.html  flower_detail.html  flowers_list.html  home.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
core/: mixins.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
(+17 files in other folders)
