[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Olga Kazorina <nefertituolga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
django = "^5.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.0"}
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
ipython = "^9.2.0"
pillow = "^11.2.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_optional = true
exclude = ['venv', 'tests']
plugins = [
    "mypy_django_plugin.main",
    "pydantic.mypy"
]
disable_error_code = [
    "empty-body",
    "no-any-return"
]


[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    )/
)
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
skip_gitignore = true

[mypy.plugins.django-stubs]
django_settings_module = "Online_store.settings"


